--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postivia</title>
+    <!-- favicon -->
+      <link rel="shortcut icon" type="image/ico" href="./asstes/favicon.png"/>
+
     <!-- cdn's -->
 
 
