--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 </div>
             </div>
 
-            <!-- two-img-gallery-section -->
+            <!-- two-img-gallery-section start -->
 
             <div class="gallary-wraper container flex">
                 <div class="main-sub-left img-gallery flex  ">
@@ -524,7 +524,7 @@
                 </div>
 
             </div>
-            <!-- two-img-gallery-section -->
+            <!-- two-img-gallery-section end -->
 
 
 
@@ -580,9 +580,9 @@
                         <div>
                             <div class="cta-r-heading">Líneas de atención</div>
                             <div class="cta-r-title">Comunicate a nivel nacional</div>
-                            <div class="cta-p-number">01-8000-111-170</div>
-                            <div style="font-size: 12px;">En Bogotá</div>
-                            <div class="cta-number">330-7000</div>
+                            <a class="cta-p-number" href="tel:+123456789">01-8000-111-170</a>
+                            <div class="no-class" style="font-size: 12px;">En Bogotá</div>
+                            <a class="cta-number" href="tel:+123456789">330-7000</a>
                         </div>
                     </div>
 
@@ -609,19 +609,19 @@
                         <div>
                             <div class="cta-r-heading">Línea Ética</div>
                             <div class="cta-r-title">Presenta aquí tu caso de fraude o corrupción</div>
-                            <div class="cta-number">01-8000-112-870</div>
+                            <a class="cta-number" href="tel:+123456789">01-8000-112-870</a>
 
                             <div class="">
-                                <div
+                                <div 
                                     style="font-family: Helvetica; font-size: 12px; font-weight: 700; margin: 15px 0px;">
                                     Correo electronico </div>
                                 <div class="email flex">
                                     <img src="./asstes/email.jpg" alt="">
-                                    <p>servicioalcliente@positiva.gov.co</p>
+                                    <a href="mailto:nouman.wpbrigade@gmail.com">servicioalcliente@positiva.gov.co</a>
                                 </div>
                                 <div class="email flex">
                                     <img src="./asstes/email.jpg" alt="">
-                                    <p>notijicacionesjudiciales@popositiva.gov.co</p>
+                                    <a href="mailto:nouman.wpbrigade@gmail.com">notijicacionesjudiciales@popositiva.gov.co</a>
                                 </div>
                             </div>
                         </div>
