check online on diff devices

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                                 stroke="white" stroke-linejoin="round" />
                         </svg>
 
-                        <p class="reponsive-fs">
+                        <p class="responsive-fs pafter1">
                             Proceso ante accidente laboral
                         </p>
                     </div>
 
                     <div class="flex">
-                        <p class="reponsive-fs">
+                        <p class="responsive-fs pafter2">
                             Iniciar sesión
                         </p>
 
