--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="es">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BH57QQ8V12"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BH57QQ8V12');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postivia</title>
+    
+    <meta name="description" content="this is a description of page.">
     <!-- favicon -->
     <link rel="shortcut icon" type="image/ico" href="./asstes/favicon.png" />
 
